fixed ChgedIcon to open the correct file

--- a/IAChgedIcon/IAChgedIcon/IAChgedIcon.vcxproj
+++ b/IAChgedIcon/IAChgedIcon/IAChgedIcon.vcxproj
@@ -114,6 +114,12 @@
       <ModuleDefinitionFile>.\IAChgedIcon.def</ModuleDefinitionFile>
       <RegisterOutput>true</RegisterOutput>
     </Link>
+    <CustomBuildStep>
+      <Command>regsvr32 /s /c "$(TargetPath)" echo regsvr32 exec. time &gt; "$(OutDir)regsvr32.trg</Command>
+    </CustomBuildStep>
+    <CustomBuildStep>
+      <Outputs>$(OutDir)regsvr32.trg;%(Outputs)</Outputs>
+    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
