--- a/iashell/iatray/iatray.csproj
+++ b/iashell/iatray/iatray.csproj
@@ -8,10 +8,11 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>iatray</RootNamespace>
     <AssemblyName>iatray</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -108,9 +109,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="RegInitalise.cs" />
-    <Compile Include="RegistryPath.cs" />
-    <Compile Include="RegSetting.cs" />
     <Compile Include="ScanDirectory.cs" />
     <Compile Include="ScanForm.cs">
       <SubType>Form</SubType>
