--- a/iashell/iaforms/iaforms.csproj
+++ b/iashell/iaforms/iaforms.csproj
@@ -49,6 +49,7 @@
     <Compile Include="AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AllowedXMLReader.cs" />
     <Compile Include="CameraChangeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +80,13 @@
     <Compile Include="ChangeTitleForm.Designer.cs">
       <DependentUpon>ChangeTitleForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingsForm.Designer.cs">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="IASetting.cs" />
     <Compile Include="ExifContainer.cs" />
     <Compile Include="TemplateForm.cs">
       <SubType>Form</SubType>
@@ -156,6 +164,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ChangeTitleForm.resx">
       <DependentUpon>ChangeTitleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SettingsForm.resx">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TemplateForm.resx">
       <DependentUpon>TemplateForm.cs</DependentUpon>
