--- a/iashell/iaforms/iaforms.csproj
+++ b/iashell/iaforms/iaforms.csproj
@@ -80,6 +80,12 @@
     <Compile Include="ChangeTitleForm.Designer.cs">
       <DependentUpon>ChangeTitleForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AllowItemsEditForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AllowItemsEditForm.Designer.cs">
+      <DependentUpon>AllowItemsEditForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -164,6 +170,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ChangeTitleForm.resx">
       <DependentUpon>ChangeTitleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AllowItemsEditForm.resx">
+      <DependentUpon>AllowItemsEditForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SettingsForm.resx">
       <DependentUpon>SettingsForm.cs</DependentUpon>
