--- a/iashell/iawizard/iawizard.csproj
+++ b/iashell/iawizard/iawizard.csproj
@@ -84,5 +84,8 @@
       <Name>Wizard</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\smallbanner1.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
