--- a/iashell/Wizard/Wizard.csproj
+++ b/iashell/Wizard/Wizard.csproj
@@ -119,13 +119,14 @@
     <Compile Include="BackupsForm.Designer.cs">
       <DependentUpon>BackupsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="CtrlCheckBoxReadOnly.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="XMLArchiveReader.cs" />
     <Compile Include="LaunchAdmin.cs" />
     <Compile Include="DefaultParameters.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="WizardForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="WizardForm.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
