--- a/iashell/iaforms/iaforms.csproj
+++ b/iashell/iaforms/iaforms.csproj
@@ -95,6 +95,13 @@
     </Compile>
     <Compile Include="AllowedXMLWriter.cs" />
     <Compile Include="AllowItems.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="MetadataForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MetadataForm.Designer.cs">
+      <DependentUpon>MetadataForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="LaunchAdmin.cs" />
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
@@ -188,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AllowItemsAddForm.resx">
       <DependentUpon>AllowItemsAddForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MetadataForm.resx">
+      <DependentUpon>MetadataForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SettingsForm.resx">
       <DependentUpon>SettingsForm.cs</DependentUpon>
