--- a/iashell/iaprop/iaprop.csproj
+++ b/iashell/iaprop/iaprop.csproj
@@ -96,5 +96,8 @@
       <Name>iaforms</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="readme.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
