--- a/iashell/iaforms/iaforms.csproj
+++ b/iashell/iaforms/iaforms.csproj
@@ -103,6 +103,7 @@
     </Compile>
     <Compile Include="AllowedXMLWriter.cs" />
     <Compile Include="AllowItems.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="DrivePropertiesForm.cs">
       <SubType>Form</SubType>
     </Compile>
