--- a/iashell/on-picture/on-picture.csproj
+++ b/iashell/on-picture/on-picture.csproj
@@ -46,6 +46,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegInitalise.cs" />
+    <Compile Include="RegistryPath.cs" />
+    <Compile Include="RegSetting.cs" />
     <Compile Include="Thumbnails.cs" />
     <Compile Include="UpdateThumbnails.cs" />
   </ItemGroup>
